# premind

./: README.md  pubspec.yaml
.github/workflows/: dart.yml
android/app/src/main/: AndroidManifest.xml
app/: .gitignore  pubspec.yaml
app/android/app/: build.gradle  google-services.json
app/android/app/src/debug/: AndroidManifest.xml
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/example/premind/: MainActivity.kt
app/android/app/src/profile/: AndroidManifest.xml
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/models/: timers.dart
app/lib/widgets/: countdown.dart  timer.dart
app/test/widgets/: timer_test.dart
backend/: Cargo.toml  build.rs
backend/src/: main.rs
ios/Runner.xcodeproj/: project.pbxproj
proto/: premind.proto
test/: widget_test.dart
