[package]
name = "backend"
version = "0.1.0"
authors = ["Kyle Frazer <16587706+frazerk@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
chrono = "0.4.19"
fcm = "0.7.1"
once_cell = "1.5.2"
prost = "0.6.1"
serde = { version = "1.0.117", features = ["derive"] }
serde_derive = "1.0.117"
slog = "2.5.2"
slog-async = "2.5.0"
slog-term = "2.6.0"
tokio = { version = "0.2.23", features = ["macros"] }
tonic = "0.3.1"
uuid = { version = "0.8.1", features = ["v4"] }

[build-dependencies]
anyhow = "1.0.34"
tonic-build = "0.3.1"
